--- a/gb/19/8/14/n11451564.md
+++ b/gb/19/8/14/n11451564.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rsllp275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rsllp275/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rsllp275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rsllp275/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rsllp275/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rsllp275/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rsllp275/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rsllp275/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rsllp275/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rsllp275/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rsllp275/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rsllp275/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rsllp275/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>川普指责WTO纵容中共 重申美国可以退出</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/b1a4bf5d5df6925907af331c712d1531-600x400.jpg" />
 <h6>美国总统川普（特朗普）周二（8月13日）表示，如果世界贸易组织（WTO）情况没有改善，美国可以考虑退出。(AFP)
 </h6>
 <hr>
-	<p>【大纪元2019年08月14日讯】（大纪元记者许祯祺综合报导）美国总统川普（特朗普）周二（8月13日）表示，如果<ahref="https://github.com/rsllp275/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E8%B4%B8%E6%98%93%E7%BB%84%E7%BB%87.md#1">世界贸易组织</a>（WTO）情况没有改善，美国可以考虑退出。</p>
-<p>川普周二前往宾夕法尼亚州，参观壳牌石油公司正在兴建的石化厂。在发表演讲时，他川普指责<ahref="https://github.com/rsllp275/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E8%B4%B8%E6%98%93%E7%BB%84%E7%BB%87.md#1">世界贸易组织</a>，说WTO纵容中共发展，而让美国遭受了损失。</p>
+	<p>【大纪元2019年08月14日讯】（大纪元记者许祯祺综合报导）美国总统川普（特朗普）周二（8月13日）表示，如果<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E8%B4%B8%E6%98%93%E7%BB%84%E7%BB%87.md#1">世界贸易组织</a>（WTO）情况没有改善，美国可以考虑退出。</p>
+<p>川普周二前往宾夕法尼亚州，参观壳牌石油公司正在兴建的石化厂。在发表演讲时，他川普指责<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E8%B4%B8%E6%98%93%E7%BB%84%E7%BB%87.md#1">世界贸易组织</a>，说WTO纵容中共发展，而让美国遭受了损失。</p>
 <p>川普表示，WTO成就了中国（中共），中共多年来依靠美国的资金和世界贸易组织的支持，却一直抨击美国，中共利用了世界贸易组织的规则。</p>
-<p>他表示，之前美国在WTO失去很多案子，但自从他当选美国总统以来，美国一直在<ahref="https://github.com/rsllp275/djy/blob/master/gb/tag/%E4%B8%96%E8%B4%B8.md#1">世贸</a>组织赢得更多案件。川普说，WTO一直在利用美国，但现在WTO明白，如果对美国再不公平的话，美国就不需要WTO。</p>
+<p>他表示，之前美国在WTO失去很多案子，但自从他当选美国总统以来，美国一直在<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%96%E8%B4%B8.md#1">世贸</a>组织赢得更多案件。川普说，WTO一直在利用美国，但现在WTO明白，如果对美国再不公平的话，美国就不需要WTO。</p>
 <p>“如果必要的话，我们将离开（WTO）。”他说。</p>
 <p>川普表示：“我们知道他们（WTO）多年来一直在损害我们，不会再发生这种情况了。”</p>
 <h2>川普就任总统后 不止一次批评WTO</h2>
-<p>川普总统采取不同以往的对华政策，努力纠正中共的不公贸易行为。美国贸易代表办公室（USTR）今年2月5日公布《2018年度的中国履行<ahref="https://github.com/rsllp275/djy/blob/master/gb/tag/%E4%B8%96%E8%B4%B8.md#1">世贸</a>组织承诺情况报告》（2018 Report to Congress on China’s WTO Compliance）报告，列举了中国（中共）不遵守WTO规则的“糟糕”记录，并指出中共继续执行国家主导的重商主义经济和贸易政策，不仅违背WTO成员国的期望，同样也违反了中共代表自己的承诺——中国（中共）将进行经济转型，追求开放的、以市场为导向的WTO政策。</p>
+<p>川普总统采取不同以往的对华政策，努力纠正中共的不公贸易行为。美国贸易代表办公室（USTR）今年2月5日公布《2018年度的中国履行<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%96%E8%B4%B8.md#1">世贸</a>组织承诺情况报告》（2018 Report to Congress on China’s WTO Compliance）报告，列举了中国（中共）不遵守WTO规则的“糟糕”记录，并指出中共继续执行国家主导的重商主义经济和贸易政策，不仅违背WTO成员国的期望，同样也违反了中共代表自己的承诺——中国（中共）将进行经济转型，追求开放的、以市场为导向的WTO政策。</p>
 <p>“事实上，越来越清楚的是，中国（中共）的行为对其它WTO成员国和多边贸易体系造成了严重损害，WTO的体系设计没有事先考虑到会有像中国这么大规模非市场经济体的情况出现。”报告写道。</p>
 <p>报告指，单靠WTO的行动迫使或说服中国（中共）对其贸易体制进行根本性改变是不现实的。WTO体系是为致力于市场原则的国家设计，而不适用于一个国家主导的、非市场体系的庞大国家。</p>
 <p>川普就任总统后，不止一次批评WTO。川普在去年8月30日表示，WTO若不好好整顿，美国将会退出。现任美国贸易代表罗伯特?莱特希泽（Robert Lighthizer）当年反对中共入世，对于目前的美中贸易冲突，他说，美国必须“依靠自己的经济实力”来解决这个问题。</p>
@@ -30,36 +30,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/18/9/18/n10724150.md#1">川普：美国正对中国产生巨大影响</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/18/9/30/n10752239.md#1">响应川普  IMF与世贸世银吁贸易体系改革</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/19/3/10/n11102055.md#1">美中一冷一热 贸易协定上川普或提前走人？</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/19/4/2/n11158598.md#1">川普政府对华强硬 专家：为使中国人受尊重</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/9/18/n10724150.md#1">川普：美国正对中国产生巨大影响</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/9/30/n10752239.md#1">响应川普  IMF与世贸世银吁贸易体系改革</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/3/10/n11102055.md#1">美中一冷一热 贸易协定上川普或提前走人？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/4/2/n11158598.md#1">川普政府对华强硬 专家：为使中国人受尊重</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/rsllp275/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2442949.md#1" target="_blank">【纪元特稿】中共打压 反助法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/9/n12174102.md#1">罢韩没过法定门槛？网红讽“韩粉式数学”</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/9/n12173575.md#1">郝海东与蔡霞狠批中共 当局严防民众效仿</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/9/n12174112.md#1">李克强提“地摊经济”中共地方表态现分裂</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/9/n12173986.md#1">中共逼迫汇丰和英国 蓬佩奥发声明强硬回击</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/9/n12173673.md#1">近千中国船员滞留英国和菲律宾 上网求救</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/8/n12171270.md#1">韩国瑜遭罢免后狂呛人 张雅琴：跟共产党真像</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/8/n12171460.md#1">郝海东效应？导演微博谈足球先生当总统遭禁</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/8/n12170990.md#1">韩国瑜遭高票罢免 黄明志：这是我眼中的台湾</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/10/n12176037.md#1">大陆博纳影业副总裁黄巍坠楼身亡</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/10/n12174687.md#1">明道认了当爸 去年登记甜娶王婷萱</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/6/5/n12164107.md#1">为什么说玉可以挡灾</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/5/23/n12131409.md#1">【馨香雅句】山川异域 风月同天 背后的故事</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/20/5/26/n12137106.md#1">楚昭越姬  为何不说山盟海誓？</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/15/8/3/n4494980.md#1">曾参劝妻守诚</a></li>
-<li><a href="https://github.com/rsllp275/djy/blob/master/gb/8/5/30/n2136535.md#1">巴洛克时代的欧洲时局</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rsllp275/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rsllp275/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/14/n11451564.htm">川普指责WTO纵容中共 重申美国可以退出</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/14/n11451564.htm">川普指责WTO纵容中共 重申美国可以退出</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rsllp275/djy/blob/master/gb/19/8/14/n11451564.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rsllp275/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rsllp275/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rsllp275/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rsllp275/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rsllp275/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/19/8/14/n11451564.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
